# ArmyChess

./: ArmyChess.pro  CMakeLists.txt  LICENSE  README.md  README_zh.md
doc/: 设计文档.docx
resources/: resources.qrc
src/: ChessLabel.cpp  ChessLabel.h  board.cpp  board.h  board.ui  connectserverwindow.cpp  connectserverwindow.h  connectserverwindow.ui  createserverwindow.cpp  createserverwindow.h  createserverwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
